snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/error-0.1.0-20210817.081412-1-sources.jar.sha1
e71632bc11e0558aa2463a0f7c1de55067d047b1